--- a/mobile/10Aug2015-mobile3.html
+++ b/mobile/10Aug2015-mobile3.html
@@ -109,18 +109,23 @@
       <div class="col-md-12">
         <h3>Mobile Test 10 August 2015</h3>
         <h4>Critical Failure One: Excess PAGE SIZE LIMIT (Continued) </h4>
-        <p>After commenting out images from Step One, the total size of the page (178.4KB) exceeds 20 kilobytes (Primary document: 28.7KB, Images: 0, Style sheets: 149.7KB)</p>
+        <p>After commenting out the css file from Step Two, the critical failures no longer came up, but there were still several severe failures.</p>
         <h4>Relevant Validator Response</h4>
-        <p>Focus on the piece of information that you want to deliver. Scale down images to a reasonable size. Remove images that are not essential to the layout of the page. Make sure to separate CSS styles defined for screen and handheld media types so that only relevant CSS styles are downloaded by most devices.</p>
-        <h4>To correct: Step Two. Review Style Sheets</h4>
-        <h4>There were four stylesheets called by the page:</h4>
-        <ul>
-          <li>http://fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond</li>
-          <li>https://cook-my-catch.github.io/mobile/usfsp.css</li>
-          <li>https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css</li>
-          <li>https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css</li>
-        </ul>
-        <h4>Of the last two from Bootstrap, the second version, "bootstrap.min.css" had a reference to media for screen, but the "bootstrap-theme.min.css" did not.  Next. Comment out the css file that has no reference to media.</h4>
+         <p>HTTP errorsThe certificate does not match the requested UR</p>
+        <h4>To correct: Step Three . Remove (Comment out) the two links for which the certificate does not match the URL</h4>
+        <p>HTTP errorsThe certificate does not match the requested URI.
+Why?
+Certificates that are not valid for the domain name of the resource being retrieved will be rejected by mobile browsers, de facto preventing the rendering of the page.
+How?
+Make sure that the certificate matches the domain name that is being used.
+Where?
+Triggered by http://gsnedders.html5.org/outliner/.
+Triggered by https://blog.mozilla.org/security/2015/04/30/deprecating-non-secure-http/.
+More information
+Severity: severe
+Most mobile devices should render the page but the user experience is strongly impacted.
+Category: HTTP errors
+The mobileOK Checker could not retrieve some of the resources required to run the tests or has found broken links.</p>
       </div>
     </div>
 
