--- a/mobile/10Aug2015-mobile5.html
+++ b/mobile/10Aug2015-mobile5.html
@@ -109,6 +109,8 @@
       <div class="col-md-12">
         <h3>Mobile Test 10 August 2015</h3>
         <h4>Moderate Failure: Not One I'm Sure I Agree With.</h4>
+        <h4><a href="http://tidy.sourceforge.net/#docs">Tidy Cleanup</a></h4>
+        <h4><a href="http://sourceforge.net/projects/tidy/">HTML Tiday</a></h4>
         <p>More than 25% of the page characters are extraneous (whitespaces or comments)MINIMIZE
 Why?
 Given the limitations of mobile networks, sending extraneous whitespaces and comments make pages slower and more costly to load.
