--- a/mobile/10Aug2015-mobile6.html
+++ b/mobile/10Aug2015-mobile6.html
@@ -108,25 +108,9 @@
     <div class="container-fluid">
       <div class="col-md-12">
         <h3>Mobile Test 10 August 2015</h3>
-        <h4>Moderate Failure: Not One I'm Sure I Agree With.</h4>
-        <h4><a href="http://tidy.sourceforge.net/#docs">Tidy Cleanup</a></h4>
-        <h4><a href="http://sourceforge.net/projects/tidy/">HTML Tiday</a></h4>
-        <h4><a href="http://www.htacg.org/">HTACG.org</a></h4>
+        <h4>Moderate Failure: The document does not validate against XHTML Basic 1.1 or MP 1.2.</h4>
         <h4><a href="https://validator.w3.org/">W3C Validator with "Cleanup with HTML Tidy" option</a></h4>
-        <p>More than 25% of the page characters are extraneous (whitespaces or comments)MINIMIZE
-Why?
-Given the limitations of mobile networks, sending extraneous whitespaces and comments make pages slower and more costly to load.
-How?
-Remove useless whitespaces and comments by adding a cleaning step in the publication process (e.g. through tidy).
-Where?
-Triggered by the resource under test.
-More information
-Severity: medium
-A mobile constraint has not been taken into account or the page relies on implicit hypotheses that could turn out to be wrong. For instance, a more conservative use of the network is possible (e.g. whitespaces account for more than 10% of the size of the page) or the character encoding is not explicitly set in the page.
-Category: Keep it small
-Smaller sites make users happier by costing less in time and money.
-Best practice:
-Use terse, efficient markup.</p>
+        <h3>Significant Work To Be Done Here.</h3>
       </div>
     </div>
 
