--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
       <div class="col-md-4">
         <ul>
           <li><a href="https://cook-my-catch.github.io/order/29July2015-usfsp-test2.html">29July 2015 OrderColumn Test</a></li>
-          
+          <li><a href="https://cook-my-catch.github.io/mobile/index.html">August 2015 Mobile Test</a></li>
         </ul>
       </div><!-- closes colmd4 three-->
       </footer>
