--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -1,6 +1,22 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <title>Test Form One</title>
 </head>
+<body>
+  <article>
+    <header><h1>Form One Test One</h1></header>
+    <section>
+      <header><h2>Section One: Institutions</h2></header>
+    </section>
+    <section>
+      <header><h2>Section Two: Colleges</h2></header>
+    </section>
+    <section>
+      <header><h2>Section Three: Programs</h2></header>
+    </section>
+    <section><header><h2>Section Four: Courses</h2></header></section>
+  </article>
+  
+</body>
 </html>
