--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
   <title>Test Form One</title>
+  <meta charset="UTF-8">
 </head>
+<nav>
+  <ul>
+    <li><a href="https://html5.validator.nu/">Nu Validator</a></li>
+  </ul>
+</nav>
 <body>
   <article>
     <header><h1>Form One Test One</h1></header>
