--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -4,6 +4,7 @@
   <title>Test Form One</title>
   <meta charset="UTF-8">
 </head>
+<body>
 <nav>
   <ul>
     <li><a href="https://html5.validator.nu/">Nu Validator</a></li>
@@ -22,5 +23,6 @@
     </section>
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
+  </body>
 </html>
  
