--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -14,6 +14,14 @@
     <header><h1>Form One Test One</h1></header>
     <section>
       <header><h2>Section One: Institutions</h2></header>
+      <label for="Institute">Institute</label>
+      <input type="text" id="instituteID" list="inistituteList">
+      <datalist id="instituteDatalistID">
+        <option value="USF" />
+        <option value="USFSP" />
+        <option value="USFSM" />
+        <option value="other" >
+      </datalist>
     </section>
     <section>
       <header><h2>Section Two: Colleges</h2></header>
