--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -31,6 +31,12 @@
     </section>
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
+  <footer>
+    <h4>References</h4>
+    <ul>
+      <li><a href="http://www.html5rocks.com/en/tutorials/forms/constraintvalidation/">Form Constraint Validation</a></li>
+    </ul>
+  </footer>
   </body>
 </html>
    
