--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -17,10 +17,10 @@
       <label for="Institute">Institute</label>
       <input type="text" id="instituteID" list="inistituteList">
       <datalist id="instituteDatalistID">
-        <option value="USF" />
-        <option value="USFSP" />
-        <option value="USFSM" />
-        <option value="other" >
+        <option value="USF">USF</option>
+        <option value="USFSP">USFSP</option>
+        <option value="USFSM">USFSM</option>
+        <option value="other">Other</option>
       </datalist>
     </section>
     <section>
