--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -14,7 +14,7 @@
     <header><h1>Form One Test One</h1></header>
     <section>
       <header><h2>Section One: Institutions</h2></header>
-        <form method="post">
+        <!-- <form method="post"> -->
         <fieldset>
                 <legend>Which Institution Do You Wish to Attend?</legend>
                         <input type="checkbox" name="USF" value="USF" />USF<br />
@@ -22,7 +22,7 @@
                         <input type="checkbox" name="USFSM" value="USFSM" />USFSM<br />
                         <input type="submit" value="Submit now" />
         </fieldset>
-    </form>
+    <!-- </form> -->
       
       
       <label for="InstituteOptions">Institute</label>
