--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -20,7 +20,7 @@
                         <input type="checkbox" name="USF" value="USF" />USF<br />
                         <input type="checkbox" name="USFSP" value="USFSP" />USFSP<br />
                         <input type="checkbox" name="USFSM" value="USFSM" />USFSM<br />
-                        <input type="submit" value="Submit now" />
+                        <input type="checkbox" name="other" value="other" />Other<br />
         </fieldset>
     <!-- </form> -->
     </section>
