--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -17,10 +17,14 @@
         <!-- <form method="post"> -->
         <fieldset>
                 <legend>Which Institution Do You Wish to Attend?</legend>
-                        <input type="checkbox" name="USF" value="USF" />USF<br />
-                        <input type="checkbox" name="USFSP" value="USFSP" />USFSP<br />
-                        <input type="checkbox" name="USFSM" value="USFSM" />USFSM<br />
-                        <input type="checkbox" name="other" value="other" />Other<br />
+                        <label for="USF">USF:
+                        <input type="checkbox" name="USF" value="USF" />USF</label><br />
+                        <label for="USFSP">USFSP:
+                        <input type="checkbox" name="USFSP" value="USFSP" />USFSP</label><br />
+                        <label for="USFSM">USFSM:
+                        <input type="checkbox" name="USFSM" value="USFSM" />USFSM</label><br />
+                        <label for="Other">Other:
+                        <input type="checkbox" name="other" value="other" />Other</label><br />
         </fieldset>
     <!-- </form> -->
     </section>
