--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -25,6 +25,10 @@
                         <input type="checkbox" name="USFSM" value="USFSM" />USFSM</label><br />
                         <label for="Other">Other:
                         <input type="checkbox" name="other" value="other" />Other</label><br />
+                        <label>
+  <input type="checkbox" name="subscribe">
+  Subscribe to newsletter
+</label>
         </fieldset>
     <!-- </form> -->
     </section>
