--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -17,18 +17,10 @@
         <!-- <form method="post"> -->
         <fieldset>
                 <legend>Which Institution Do You Wish to Attend?</legend>
-                        <label for="USF">USF:
-                        <input type="checkbox" name="USF" value="USF" />USF</label><br />
-                        <label for="USFSP">USFSP:
-                        <input type="checkbox" name="USFSP" value="USFSP" />USFSP</label><br />
-                        <label for="USFSM">USFSM:
-                        <input type="checkbox" name="USFSM" value="USFSM" />USFSM</label><br />
-                        <label for="Other">Other:
-                        <input type="checkbox" name="other" value="other" />Other</label><br />
-                        <label>
-  <input type="checkbox" name="subscribe">
-  Subscribe to newsletter
-</label>
+                        <label><input type="checkbox" name="USF">USF</label>
+                        <label><input type="checkbox" name="USFSP">USFSP</label>
+                        <label><input type="checkbox" name="USFSM">USFSM</label>
+                        <label><input type="checkbox" name="Other">Other</label>
         </fieldset>
     <!-- </form> -->
     </section>
