--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -13,6 +13,7 @@
 <nav>
   <ul>
     <li><a href="http://tenon.io/">Tenon.io</a></li>
+    <li><a href="http://www.cynthiasays.com/">CynthiaSays.com</a></li>
   </ul>
 </nav>
   <article>
