--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -7,7 +7,8 @@
 <body>
 <nav>
   <ul>
-    <li><a href="https://html5.validator.nu/">Nu Validator</a></li>
+    <li><a href="https://html5.validator.nu/">HTML5 Nu Validator</a></li>
+    <li><a href="http://jigsaw.w3.org/css-validator/">W3C CSS Validator</a></li>
   </ul>
 </nav>
 <nav>
