--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -9,10 +9,7 @@
   <ul>
     <li><a href="https://html5.validator.nu/">HTML5 Nu Validator</a></li>
     <li><a href="http://jigsaw.w3.org/css-validator/">W3C CSS Validator</a></li>
-  </ul>
-</nav>
-<nav>
-  <ul>
+    <li><a href="https://validator.w3.org/i18n-checker/">i18n</a></li>
     <li><a href="http://tenon.io/">Tenon.io</a></li>
     <li><a href="http://www.cynthiasays.com/">CynthiaSays.com</a></li>
   </ul>
