--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -18,7 +18,6 @@
     <header><h1>Form One Test One</h1></header>
     <section>
       <header><h2>Section One: Institutions</h2></header>
-        <!-- <form method="post"> -->
         <fieldset>
                 <legend>Which Institution Do You Wish to Attend?</legend>
                         <label><input type="checkbox" name="USF">USF</label>
@@ -26,10 +25,16 @@
                         <label><input type="checkbox" name="USFSM">USFSM</label>
                         <label><input type="checkbox" name="Other">Other</label>
         </fieldset>
-    <!-- </form> -->
     </section>
     <section>
       <header><h2>Section Two: Colleges</h2></header>
+                 <fieldset>
+                <legend>Which College Do You Wish to Attend?</legend>
+                        <label><input type="checkbox" name="Business">Business</label>
+                        <label><input type="checkbox" name="Technology and Innovation">Technology and Innovation</label>
+                        <label><input type="checkbox" name="Arts and Sciences">Arts & Sciences</label>
+                        <label><input type="checkbox" name="Other">Other</label>
+        </fieldset>
     </section>
     <section>
       <header><h2>Section Three: Programs</h2></header>
