--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -15,7 +15,7 @@
     <li><a href="http://www.cynthiasays.com/">CynthiaSays.com</a></li>
   </ul>
 </nav>
-  <article>
+  <article itemscope itemtype="http://schema.org/mainEntityOfPage">
     <header><h1>Form One Test One</h1></header>
     <section>
       <header><h2>Section One: Institutions</h2></header>
