--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -15,15 +15,15 @@
     <li><a href="http://www.cynthiasays.com/">CynthiaSays.com</a></li>
   </ul>
 </nav>
-  <article itemscope itemtype="http://schema.org/mainEntityOfPage">
-    <header><h1>Form One Test One</h1></header>
+  <article itemscope itemtype="http://schema.org/CreativeWork">
+    <header itemprop="mainEntityOfPage"><h1>Form One Test One</h1></header>
     <section>
       <header><h2>Section One: Institutions</h2></header>
         <fieldset>
-                <legend>Which Institution Do You Wish to Attend?</legend>
-                        <label><input type="checkbox" name="USF">USF</label>
-                        <label><input type="checkbox" name="USFSP">USFSP</label>
-                        <label><input type="checkbox" name="USFSM">USFSM</label>
+                <legend itemscope itemtype="http://schema.org/AdministrativeArea">Which Institution Do You Wish to Attend?</legend>
+                        <label><input type="checkbox" name="USF" itemprop="USF Tampa">USF</label>
+                        <label><input type="checkbox" name="USFSP" itemprop="USF Saint Petersburg">USFSP</label>
+                        <label><input type="checkbox" name="USFSM" itemprop="USF Sarasota Manatee">USFSM</label>
                         <label><input type="checkbox" name="Other">Other</label>
         </fieldset>
     </section>
