--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -21,9 +21,9 @@
       <header><h2>Section One: Institutions</h2></header>
         <fieldset>
                 <legend itemscope itemtype="http://schema.org/AdministrativeArea">Which Institution Do You Wish to Attend?</legend>
-                        <label><input type="checkbox" name="USF" itemprop="applicableLocation">USF</label>
-                        <label><input type="checkbox" name="USFSP" itemprop="applicableLocation">USFSP</label>
-                        <label><input type="checkbox" name="USFSM" itemprop="applicableLocation">USFSM</label>
+                        <label><input type="checkbox" name="USF">USF</label>
+                        <label><input type="checkbox" name="USFSP">USFSP</label>
+                        <label><input type="checkbox" name="USFSM">USFSM</label>
                         <label><input type="checkbox" name="Other">Other</label>
         </fieldset>
     </section>
