--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -35,7 +35,35 @@
                         <label><input type="checkbox" name="Technology and Innovation">Technology and Innovation</label>
                         <label><input type="checkbox" name="Arts and Sciences">Arts & Sciences</label>
                         <label><input type="checkbox" name="Education">Education</label>
-                        <label><input type="checkbox" name="Education">Education</label>
+                        <label><input type="checkbox" name="Human and Social Sciences">Human and Social Sciences</label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        
         </fieldset>
     </section>
     <section>
