--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -36,7 +36,7 @@
                         <label><input type="checkbox" name="Arts and Sciences">Arts & Sciences</label>
                         <label><input type="checkbox" name="Education">Education</label>
                         <label><input type="checkbox" name="Human and Social Sciences">Human and Social Sciences</label>
-                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="Behavioral and Community Sciences ">Behavioral and Community Sciences </label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
@@ -68,6 +68,36 @@
     </section>
     <section>
       <header><h2>Section Three: Programs</h2></header>
+      <fieldset>
+                <legend>Which Program Do You Wish to Attend?</legend>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        
+        </fieldset>
     </section>
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
