--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -37,33 +37,21 @@
                         <label><input type="checkbox" name="Education">Education</label>
                         <label><input type="checkbox" name="Human and Social Sciences">Human and Social Sciences</label>
                         <label><input type="checkbox" name="Behavioral and Community Sciences ">Behavioral and Community Sciences </label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        
+                        <label><input type="checkbox" name="Undergraduate Studies">Undergraduate Studies</label>
+                        <label><input type="checkbox" name="Architecture & Community Design">Architecture & Community Design</label>
+                        <label><input type="checkbox" name="College of The Arts">College of The Arts</label>
+                        <label><input type="checkbox" name="Undergraduate Studies">Undergraduate Studies</label>
+                        <label><input type="checkbox" name="Medicine ">Medicine</label>
+                        <label><input type="checkbox" name="Engineering">Engineering</label>
+                        <label><input type="checkbox" name="FMHI: de la Parte Florida Mental Health Institute">FMHI: de la Parte Florida Mental Health Institute</label>
+                        <label><input type="checkbox" name="Human and Social Sciences">Human and Social Sciences</label>
+                        <label><input type="checkbox" name="Global Sustainability">Global Sustainability</label>
+                        <label><input type="checkbox" name="Public Health">Public Health</label>
+                        <label><input type="checkbox" name="Graduate School">Graduate School</label>
+                        <label><input type="checkbox" name="Hotel & Tech Leadership">Hotel & Tech Leadership</label>
+                        <label><input type="checkbox" name="Marine Science">Marine Science</label>
+                        <label><input type="checkbox" name="Undergraduate Studies">Undergraduate Studies</label>
+
         </fieldset>
     </section>
     <section>
@@ -96,8 +84,7 @@
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
-                        
-        </fieldset>
+      </fieldset>
     </section>
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
