--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -58,18 +58,18 @@
       <header><h2>Section Three: Programs</h2></header>
       <fieldset>
                 <legend>Which Program Do You Wish to Attend?</legend>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="Accounting">Accounting</label>
+                        <label><input type="checkbox" name="Administration/Supervision">Administration/Supervision</label>
+                        <label><input type="checkbox" name="Adult/Vocational/Hum Res Div">Adult/Vocational/Hum Res Div</label>
+                        <label><input type="checkbox" name="Africana Studies">Africana Studies</label>
+                        <label><input type="checkbox" name="Aging Studies">Aging Studies </label>
+                        <label><input type="checkbox" name="Air Force (ROTC)">Air Force (ROTC)</label>
+                        <label><input type="checkbox" name="American Studies">American Studies</label>
+                        <label><input type="checkbox" name="Anthropology">Anthropology</label>
+                        <label><input type="checkbox" name="Architecture">Architecture</label>
+                        <label><input type="checkbox" name="Army (ROTC)">Army (ROTC)</label>
+                        <label><input type="checkbox" name="Art">Art</label>
+                        <label><input type="checkbox" name="Art Education">Art Education</label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
