--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -70,6 +70,22 @@
                         <label><input type="checkbox" name="Army (ROTC)">Army (ROTC)</label>
                         <label><input type="checkbox" name="Art">Art</label>
                         <label><input type="checkbox" name="Art Education">Art Education</label>
+                        <label><input type="checkbox" name="Astronomy"></label>
+                        <label><input type="checkbox" name="Athletic Training">Athletic Training</label>
+                        <label><input type="checkbox" name="Basic & Interdisciplinary Eng">Basic & Interdisciplinary Eng</label>
+                        <label><input type="checkbox" name="Biology">Biology</label>
+                        <label><input type="checkbox" name="Biology - Integrative">Biology - Integrative </label>
+                        <label><input type="checkbox" name="Biology-Cell, Micro, Molecular">Biology-Cell, Micro, Molecular </label>
+                        <label><input type="checkbox" name="Biology-Cell, Molecular & Micr ">Biology-Cell, Molecular & Micr </label>
+                        <label><input type="checkbox" name="Business Administration">Business Administration</label>
+                        <label><input type="checkbox" name="Chemical & Biomedical Eng ">Chemical & Biomedical Eng </label>
+                        <label><input type="checkbox" name="Chemistry">Chemistry</label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
