--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -31,7 +31,7 @@
       <header><h2>Section Two: Colleges</h2></header>
                  <fieldset>
                 <legend>Which College Do You Wish to Attend?</legend>
-                        <label><input type="checkbox" name="Business" class="SM SP TP">Business</label>
+                        <label><input type="checkbox" name="Business" class="USF USFSP USFSM (BM) (BP) (BA)">Business</label>
                         <label><input type="checkbox" name="Technology and Innovation">Technology and Innovation</label>
                         <label><input type="checkbox" name="Arts and Sciences">Arts & Sciences</label>
                         <label><input type="checkbox" name="Education">Education</label>
@@ -81,8 +81,8 @@
                         <label><input type="checkbox" name="Chemical & Biomedical Eng ">Chemical & Biomedical Eng </label>
                         <label><input type="checkbox" name="Chemistry">Chemistry</label>
                         <label><input type="checkbox" name="Child & Family Studies"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="Childhood Ed & Literacy Stdies">Childhood Ed & Literacy Stdies</label>
+                        <label><input type="checkbox" name="Civil & Environmental Eng">Civil & Environmental Eng</label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
