--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -9,6 +9,7 @@
   <ul>
     <li><a href="https://html5.validator.nu/">HTML5 Nu Validator</a></li>
     <li><a href="http://jigsaw.w3.org/css-validator/">W3C CSS Validator</a></li>
+    <li><a href="https://validator.w3.org/mobile-alpha/">Mobile Tester Alpha</a></li>
     <li><a href="https://developers.google.com/structured-data/testing-tool/">Rich Snippets Testing</a></li>
     <li><a href="https://validator.w3.org/i18n-checker/">i18n</a></li>
     <li><a href="http://tenon.io/">Tenon.io</a></li>
