--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -84,11 +84,11 @@
                         <label><input type="checkbox" name="Child & Family Studies"></label>
                         <label><input type="checkbox" name="Childhood Ed & Literacy Stdies">Childhood Ed & Literacy Stdies</label>
                         <label><input type="checkbox" name="Civil & Environmental Eng">Civil & Environmental Eng</label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
-                        <label><input type="checkbox" name="#"></label>
+                        <label><input type="checkbox" name="Classics (Greek and Latin) ">Classics (Greek and Latin) </label>
+                        <label><input type="checkbox" name="Co-op Education">Co-op Education</label>
+                        <label><input type="checkbox" name="Co-op Education">Co-op Education</label>
+                        <label><input type="checkbox" name="Communication">Communication</label>
+                        <label><input type="checkbox" name="Communication Sciences & Disorders">Communication Sciences & Disorders</label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
