--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -59,8 +59,8 @@
       <header><h2>Section Three: Programs</h2></header>
       <fieldset>
                 <legend>Which Program Do You Wish to Attend?</legend>
-                        <label><input type="checkbox" name="Accounting">Accounting</label>
-                        <label><input type="checkbox" name="Administration/Supervision">Administration/Supervision</label>
+                        <label><input type="checkbox" name="Accounting" data-code="(ACC)">Accounting</label>
+                        <label><input type="checkbox" name="Administration/Supervision" data-code="(EDB)">Administration/Supervision</label>
                         <label><input type="checkbox" name="Adult/Vocational/Hum Res Div">Adult/Vocational/Hum Res Div</label>
                         <label><input type="checkbox" name="Africana Studies">Africana Studies</label>
                         <label><input type="checkbox" name="Aging Studies">Aging Studies </label>
