--- a/tasks/form1/test1.html
+++ b/tasks/form1/test1.html
@@ -61,34 +61,33 @@
                 <legend>Which Program Do You Wish to Attend?</legend>
                         <label><input type="checkbox" name="Accounting" data-code="(ACC)">Accounting</label>
                         <label><input type="checkbox" name="Administration/Supervision" data-code="(EDB)">Administration/Supervision</label>
-                        <label><input type="checkbox" name="Adult/Vocational/Hum Res Div">Adult/Vocational/Hum Res Div</label>
-                        <label><input type="checkbox" name="Africana Studies">Africana Studies</label>
-                        <label><input type="checkbox" name="Aging Studies">Aging Studies </label>
-                        <label><input type="checkbox" name="Air Force (ROTC)">Air Force (ROTC)</label>
-                        <label><input type="checkbox" name="American Studies">American Studies</label>
-                        <label><input type="checkbox" name="Anthropology">Anthropology</label>
-                        <label><input type="checkbox" name="Architecture">Architecture</label>
-                        <label><input type="checkbox" name="Army (ROTC)">Army (ROTC)</label>
-                        <label><input type="checkbox" name="Art">Art</label>
-                        <label><input type="checkbox" name="Art Education">Art Education</label>
-                        <label><input type="checkbox" name="Astronomy"></label>
-                        <label><input type="checkbox" name="Athletic Training">Athletic Training</label>
-                        <label><input type="checkbox" name="Basic & Interdisciplinary Eng">Basic & Interdisciplinary Eng</label>
-                        <label><input type="checkbox" name="Biology">Biology</label>
-                        <label><input type="checkbox" name="Biology - Integrative">Biology - Integrative </label>
-                        <label><input type="checkbox" name="Biology-Cell, Micro, Molecular">Biology-Cell, Micro, Molecular </label>
-                        <label><input type="checkbox" name="Biology-Cell, Molecular & Micr ">Biology-Cell, Molecular & Micr </label>
-                        <label><input type="checkbox" name="Business Administration">Business Administration</label>
-                        <label><input type="checkbox" name="Chemical & Biomedical Eng ">Chemical & Biomedical Eng </label>
-                        <label><input type="checkbox" name="Chemistry">Chemistry</label>
-                        <label><input type="checkbox" name="Child & Family Studies"></label>
-                        <label><input type="checkbox" name="Childhood Ed & Literacy Stdies">Childhood Ed & Literacy Stdies</label>
-                        <label><input type="checkbox" name="Civil & Environmental Eng">Civil & Environmental Eng</label>
-                        <label><input type="checkbox" name="Classics (Greek and Latin) ">Classics (Greek and Latin) </label>
-                        <label><input type="checkbox" name="Co-op Education">Co-op Education</label>
-                        <label><input type="checkbox" name="Co-op Education">Co-op Education</label>
-                        <label><input type="checkbox" name="Communication">Communication</label>
-                        <label><input type="checkbox" name="Communication Sciences & Disorders">Communication Sciences & Disorders</label>
+                        <label><input type="checkbox" name="Adult/Vocational/Hum Res Div" data-code="(EDV)">Adult/Vocational/Hum Res Div</label>
+                        <label><input type="checkbox" name="Africana Studies" data-code="(AFA)">Africana Studies</label>
+                        <label><input type="checkbox" name="Aging Studies" data-code="(AGE)">Aging Studies </label>
+                        <label><input type="checkbox" name="Air Force (ROTC)" data-code="(AFR)">Air Force (ROTC)</label>
+                        <label><input type="checkbox" name="American Studies" data-code="(AMS)">American Studies</label>
+                        <label><input type="checkbox" name="Anthropology" data-code="(ANT)">Anthropology</label>
+                        <label><input type="checkbox" name="Architecture" data-code="(ARC)">Architecture</label>
+                        <label><input type="checkbox" name="Army (ROTC)" data-code="(MIS)">Army (ROTC)</label>
+                        <label><input type="checkbox" name="Art" data-code="(ART)">Art</label>
+                        <label><input type="checkbox" name="Art Education" data-code="(EDA)">Art Education</label>
+                        <label><input type="checkbox" name="Astronomy" data-code="(AST)"></label>
+                        <label><input type="checkbox" name="Athletic Training" data-code="(ATH)">Athletic Training</label>
+                        <label><input type="checkbox" name="Basic & Interdisciplinary Eng" data-code="(EGB)">Basic & Interdisciplinary Eng</label>
+                        <label><input type="checkbox" name="Biology" data-code="(BIO)">Biology</label>
+                        <label><input type="checkbox" name="Biology - Integrative" data-code="(BIN)">Biology - Integrative </label>
+                        <label><input type="checkbox" name="Biology-Cell, Micro, Molecular" data-code="(BCM)">Biology-Cell, Micro, Molecular </label>
+                        <label><input type="checkbox" name="Biology-Cell, Molecular & Micr" data-code="(BCM)">Biology-Cell, Molecular & Micr </label>
+                        <label><input type="checkbox" name="Business Administration" data-code="(MBA)">Business Administration</label>
+                        <label><input type="checkbox" name="Chemical & Biomedical Eng" data-code="(ECH)">Chemical & Biomedical Eng </label>
+                        <label><input type="checkbox" name="Chemistry" data-code="(CHM)">Chemistry</label>
+                        <label><input type="checkbox" name="Child & Family Studies" data-code="(CFS)"></label>
+                        <label><input type="checkbox" name="Childhood Ed & Literacy Stdies" data-code="(EDR)">Childhood Ed & Literacy Stdies</label>
+                        <label><input type="checkbox" name="Civil & Environmental Eng" data-code="(EGX)">Civil & Environmental Eng</label>
+                        <label><input type="checkbox" name="Classics (Greek and Latin)" data-code="(CLA)">Classics (Greek and Latin) </label>
+                        <label><input type="checkbox" name="Co-op Education" data-code="(COE)">Co-op Education</label>
+                        <label><input type="checkbox" name="Communication" data-code="(SPE)">Communication</label>
+                        <label><input type="checkbox" name="Communication Sciences & Disorders" data-code="(CSD)">Communication Sciences & Disorders</label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
                         <label><input type="checkbox" name="#"></label>
